# bread-buddy

./: .gitignore  README.md  TODO.md  app.py  bakers_calculators.py  dough.py  ingredient.py  levain.py  main.py  pyproject.toml  recipe.py  recipes.py  requirements.txt  utils.py
models/: dough.py  ingredient.py  levain.py  recipe.py
static/: style.css
templates/: index.html
